--- a/.github/workflows/aspnet-build.yml
+++ b/.github/workflows/aspnet-build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Log in to the Container registry
-        uses: docker/login-action@2
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -30,7 +30,7 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@4
+        uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
