--- a/crop-api/Dockerfile
+++ b/crop-api/Dockerfile
@@ -8,7 +8,7 @@ COPY crop-api/*.csproj ./crop-api/
 RUN dotnet restore
 
 # copy everything else and build app
-COPY crop-api/. ./crop-api/
+COPY crop-api/* ./crop-api/
 WORKDIR /source/crop-api
 RUN dotnet publish -c release -o /crop-api-app --no-restore
 
@@ -16,4 +16,4 @@ RUN dotnet publish -c release -o /crop-api-app --no-restore
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /crop-api-app
 COPY --from=build /crop-api-app ./
-ENTRYPOINT ["dotnet", "crop-api.dll"]
+ENTRYPOINT ["dotnet", "CROP API.dll"]
