--- a/.github/workflows/aspnet-build.yml
+++ b/.github/workflows/aspnet-build.yml
@@ -17,7 +17,7 @@ jobs:
     
     env:
       REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ matrix.project }}
+      IMAGE_NAME: ${{ github.repository_owner }}/${{ matrix.project }}
   
     permissions:
       contents: read
