--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,16 @@ networks:
     driver: bridge
 
 services:
+  openssl:
+    image: alpine:3.7
+    environment: 
+      - NGINX_HOST=www.example.com
+    command: openssl req -x509 -nodes -days 3650 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/C=US/ST=Denial/L=Springfield/O=Dis/CN=${NGINX_HOST}"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx-selfsigned.key:/etc/ssl/private/nginx-selfsigned.key
+      - ./nginx-selfsigned.crt:/etc/ssl/certs/nginx-selfsigned.crt
+
   postgresql:
     image: postgres:9.6
     environment:
@@ -18,13 +28,22 @@ services:
   
   redis-stack:
     image: redis-stack:latest
+    volumes:
+      - redis-stack:/data
     networks:
       - backend
 
   my-project:
     build: .
+    ports:
+      - "5182:5182"
     volumes:
       - .:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=my_project.settings
+      - DATABASE_URL=postgres://postgres:postgres@postgresql:5432/postgres
+      - REDIS_URL=redis://redis-stack:6379/0
+      - SECRET_KEY=secret
     depends_on:
       - postgresql
       - redis-stack
@@ -38,7 +57,9 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
+      - openssl
       - my-project
     networks:
       - frontend
