--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -11,6 +11,9 @@
   "PostgreSQL": {
     "Connection": "Server=localhost;Port=5432;Database=db_crop_api;User Id=postgres;Password=postgres"
   },
+  "File": {
+    "Database": "database"
+  },
   "Jwt": {
     "Issuer": "https://example.com/",
     "Audience": "https://example.com/",
