--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "Redis": {
-    "Connection": "redis://10.211.55.2:6379"
+    "Connection": "redis://localhost:6379"
   },
   "PostgreSQL": {
-    "Connection": "Server=localhost;Port=5432;Database=db_crop_api;User Id=postgres;Password=postgres"
+    "Connection": "Server=localhost;Port=5432;Database=db_crop;User Id=crop;Password=crop;"
   },
   "File": {
     "Database": "database"
