Update File Controller

--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -11,8 +11,8 @@
   "PostgreSQL": {
     "Connection": "Server=localhost;Port=5432;Database=db_crop;User Id=crop;Password=crop;"
   },
-  "File": {
-    "Database": "database"
+  "Storage": {
+    "File": "file"
   },
   "Jwt": {
     "Issuer": "https://example.com/",
