--- a/crop-api/Properties/launchSettings.json
+++ b/crop-api/Properties/launchSettings.json
@@ -5,7 +5,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DATABASE_URL": "Server=nas.home;Port=15432;Database=db_crop;User Id=crop;Password=crop;",
+        "REDIS_URL": "redis://nas.home:6379"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5182"
