--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:5182"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
