Add Crop Path Headers

--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -22,8 +22,8 @@
     "File": "file"
   },
   "Jwt": {
-    "Issuer": "https://example.com/",
-    "Audience": "https://example.com/",
+    "Issuer": "https://crop.crscd.net/",
+    "Audience": "https://crop.crscd.net/",
     "Key": "726c6c63-aca2-4ae6-98a2-3f5b2bf4e915"
   },
   "AllowedHosts": "*"
