--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -24,7 +24,7 @@
   "Jwt": {
     "Issuer": "https://crop.crscd.net/",
     "Audience": "https://crop.crscd.net/",
-    "Key": "726c6c63-aca2-4ae6-98a2-3f5b2bf4e915"
+    "Key": "726c6c63-aca2-4ae6-98a2-3f5b2bf4e915-a3bf22b0-6273-4ec8-a1d0-b692b4c5ca5b"
   },
   "AllowedHosts": "*"
 }
