--- a/crop-api/Properties/launchSettings.json
+++ b/crop-api/Properties/launchSettings.json
@@ -20,7 +20,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DATABASE_URL": "Server=localhost;Port=5432;Database=db_crop;User Id=crop;Password=crop;",
-        "REDIS_URL": "redis://localhost:6379"
+        "REDIS_URL": "redis://localhost:6379",
+        "CORS_URL": "true"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7212;http://localhost:5182"
