Add System Report

--- a/crop-api/Dockerfile
+++ b/crop-api/Dockerfile
@@ -16,8 +16,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /crop-api-app
 COPY --from=build /crop-api-app ./
 
-# install vmstat, ifstat, free
-RUN apt-get update && apt-get install -y procps ifstat
+# install vmstat, ifstat, free, lshw
+RUN apt-get update && apt-get install -y lshw procps ifstat
 
 # add entrypoint
 ENTRYPOINT ["dotnet", "CROP API.dll"]
