--- a/crop-api/appsettings.json
+++ b/crop-api/appsettings.json
@@ -19,7 +19,7 @@
     "Connection": "Server=localhost;Port=5432;Database=db_crop;User Id=crop;Password=crop;"
   },
   "Storage": {
-    "File": "file"
+    "File": "Storage"
   },
   "Jwt": {
     "Issuer": "https://crop.crscd.net/",
