--- a/crop-api/CROP API.csproj
+++ b/crop-api/CROP API.csproj
@@ -40,7 +40,7 @@
     <None Update="Config\station.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Config\user.xml">
+    <None Update="User\user.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
