--- a/crop-api/Dockerfile
+++ b/crop-api/Dockerfile
@@ -34,6 +34,6 @@ ENV ASPNETCORE_URLS=http://localhost:5182
 ENV DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
 ENV REDIS_URL=redis://redis:6379
 ENV CORS=false
-ENV CONFIG_PATH=/crop-api-app/config
-ENV USER_PATH=/crop-api-app/user
+ENV CONFIG_PATH=/crop-api-app/Config/station.xml
+ENV USER_PATH=/crop-api-app/User/user.xml
 ENV STORAGE_PATH=/storage
