Update Alarm Data

--- a/crop-api/Properties/launchSettings.json
+++ b/crop-api/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "http": {
       "commandName": "Project",
+      "externalUrlConfiguration": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
@@ -15,6 +16,7 @@
     },
     "https": {
       "commandName": "Project",
+      "externalUrlConfiguration": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
